argocd-ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: 192.168.1.119.nip.io  # IP adresa s NIP.IO pro generování doménového jména
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - 192.168.1.119.nip.io
      secretName: argocd-tls  # Název tajného klíče pro TLS certifikát (pokud používáte HTTPS)
